--- a/Cedric.html
+++ b/Cedric.html
@@ -59,7 +59,7 @@
         <h1>Cedric</h1>
         <p class="TopDescript">
           Cedric is a struggling inventor with a wonderful tech invention that
-          will make lives easier , however, this invention is still in the
+          will make lives easier, however, this invention is still in the
           sketch phase and will be for a while. He is single with no kids and
           needs a calm work environment, he is 21 years old. He doesn't want an
           extraordinary lifestyle, as long as his inventions reach many hands.
@@ -81,10 +81,10 @@
           We will get him a studio apartment in Calgary and make him share with
           a roommate. The average rent for a studio in Calgary is $1569 Zumper.
           We will find 1 roommate who will also be his business partner. It may
-          seem hard to share a studio apartment, but it is doable spacewise. Now
+          seem hard to share a studio apartment, but it is doable space-wise. Now
           his rent is $784.5, this is good for him to rent because permanent
           living situations are only good for people with stable incomes,
-          however, Cedric does not have that so its better to get a mad
+          however, Cedric does not have that so it's better to get a mad
           landlord than a bank.
         </p>
       </div>
