--- a/Jane.html
+++ b/Jane.html
@@ -108,18 +108,18 @@
       </div>
       <div class="col TextSide">
         <p class="Transportation">
-          Lastly, for car payments, we would recommend a car that's good for
-          insurance, but also looks nice. I think a jeep wrangler is good for
+          Lastly, for car payments, we recommend a car that's suitable for
+          insurance, but also looks nice. I think a Jeep Wrangler is suitable for
           insurance as the average is $1,400 annually but because you're in your
-          late twenties it would be around two thousand dollars or more. A jeep
-          wrangler is a very reliable vehicle and can be worked on by anyone, so
-          maintenance for a 12-year Jeep is $700 annually. I found a really cool
-          jeep wrangler with some mods, that's 12 yrs old with 240,000km, the
-          price is negotiable, but he listed it for $18,000, I think this is a
-          good car for you because it's big enough for athletic size, but also
-          not as big, with good insurance. Car. In order to pay for this we can
+          late twenties it would be around two thousand dollars or more. A Jeep
+          Wrangler is a very reliable vehicle and can be worked on by anyone, so
+          maintenance for a 12-year Jeep is $700 annually. I found a cool
+          Jeep Wrangler with some mods, 12 yrs old with 240,000km, the
+          price is negotiable, but he listed it for $18,000. I think this is a
+          good car for you because it's spacious enough for athletic size, but also
+          not as substantial, with reasonable insurance. Car. To pay for this we can
           get a loan, that loan will have a 6% interest rate so you will pay
-          $1547.88 a month, and will pay $574.57 extra.
+          $1547.88 a month, and I have to pay $574.57 extra.
         </p>
       </div>
     </div>
