--- a/Jonathan.html
+++ b/Jonathan.html
@@ -59,7 +59,7 @@
       <div class="PersonHeader">
         <h1>Jonathan</h1>
         <p class="TopDescript">
-            Jonathan is a college graduate with no debt, he is 23 living with his parents working at mcdonalds. He plans on making money with the lottery, and for this week the lotto max jackpot is 70 million, and will update on june 6. Because he lives with his family he has no rent and gets home cooked meals. The only things he pays for is transportation, clothing and data plan.
+          Jonathan is a college graduate with no debt, he is 23 living with his parents working at mcdonalds. He plans on making money with the lottery, and for this week the lotto max jackpot is 70 million, and will update on june 6. Because he lives with his family he has no rent and gets home cooked meals. The only things he pays for is transportation, clothing and data plan.
         </p>
       </div>
     </header>
@@ -72,7 +72,7 @@
       </div>
       <div class="col TextSide">
         <p class="Housing">
-            I would still recommend him living with his parents because it is the best situation right now. It allows him to save money and not worry about rent or utilities. It will also give him time to focus on his studies and career without the added stress of living on his own. Plus, living with his parents will give him the support he needs during this difficult time.
+          I would still recommend him to live with his parents because it is the best situation right now. It allows him to save money and not worry about rent or utilities. It will also give him time to focus on his studies and career without the added stress of living on his own. Plus, living with his parents will give him the support he needs during this difficult time.
         </p>
       </div>
     </div>
@@ -85,7 +85,7 @@
       </div>
       <div class="col TextSide">
         <p class="Account">
-            For account options I would recommend a savings, and checking account. These accounts are vital for him, as well i would suggest he get a HFSA in order to save for a home tax free. Because we want Jonathan to have a good chance at winning the lottery we would take 50% of the check and put that to tickets for the lottery. From his Mcdonalds job he would have an income of $24.83 an hour, because Jonathan has nothing else to do he spends 10 hours a day at his job. So he makes 7 thousand dollars a month. 
+          For account options, I would recommend a savings, and checking account. These accounts are vital for him, as well I would suggest he get an HFSA in order to save for a home tax-free. Because we want Jonathan to have a good chance at winning the lottery we would take 50% of the check and put that to tickets for the lottery. From his Mcdonald's job, he would have an income of $24.83 an hour, because Jonathan has nothing else to do he spends 10 hours a day at his job. So he makes 7 thousand dollars a month.
         </p>
       </div>
     </div>
@@ -98,14 +98,14 @@
       </div>
       <div class="col TextSide">
         <p class="Transportation">
-            For his job he goes there and back everyday, he goes on the mi way bus which is $3.20 per ride, he goes 14 times a week and 4 weeks in a month so he spends $179.2. He can buy lottery tickets from home so he doesn't need to go to a convenience store.
+          For his job he goes there and back every day, he goes on the mi way bus which is $3.20 per ride, he goes 14 times a week and 4 weeks a month so he spends $179.2. He can buy lottery tickets from home so he doesn't need to go to a convenience store.
         </p>
       </div>
     </div>
     <hr />
     <!--Conclusion-->
     <p>
-        He is not a materialistic person so he spends $50 a month on clothes. For his data we will go with rogers mobiles only 5g mobile 50gb plan with unlimited data. This costs $65 a month. Lastly, I would recommend him to play with stocks as it could return some benefits.
+      He is not a materialistic person so he spends $50 a month on clothes. For his data, we will go with Rogers mobile only 5g mobile 50 GB plan with unlimited data. This costs $65 a month. Lastly, I would recommend he play with stocks as it could return some benefits.
     </p>
     <br />
     <p>
