--- a/Owen.html
+++ b/Owen.html
@@ -77,12 +77,12 @@
         <p class="Housing">
           I would suggest to him to get a mortgage because he has the financial
           resources to do so, and it will be beneficial to get some real estate.
-          The mortgage rate for a 5 year variable mortgage is %6.45. The reason
+          The mortgage rate for a 5-year variable mortgage is %6.45. The reason
           I would go with a variable rate, is because you won't be affected by
-          it’s changing over the years. I would suggest the down payment of
+          its changing over the years. I would suggest a down payment of
           $300,000 thousand as that is 1 year of your salary so I would say just
           live with your family for that term. With a $300,000 down payment, you
-          would get a $1,495,000 mortgage, with a 6.45% interest rate you will
+          would get a $1,495,000 mortgage, and with a 6.45% interest rate you will
           pay monthly $16,438.54.
         </p>
       </div>
@@ -96,28 +96,28 @@
       </div>
       <div class="col TextSide">
         <p class="Account">
-          The accounts I recommend will be a FHSA because building a real estate
-          portfolio is really going to be beneficial to grow generational
+          The accounts I recommend will be an FHSA because building a real estate
+          portfolio is going to be beneficial to grow generational
           wealth. I wouldn’t recommend a TFSA account because the limit is
           $6,500, and once you take it out you will be taxed, so as a business
           you will be put in such a high tax bracket it won't be worth it. Some
-          ways to avoid taxes is by incorporating your business and hiring
+          ways to avoid taxes are by incorporating your business and hiring
           people you would get benefits like lower tax rates, and it's easier to
           claim capital. Capital is a critical component of running a business
           from day to day and financing its future growth. You should also make
           some donations because Charitable donations over $200 will typically
-          bring provincial tax credits between 11.16% (Ontario) source . Tax
+          bring provincial tax credits between 11.16% (Ontario) source. Tax
           credit refers to an amount of money that taxpayers can subtract
           directly from the taxes they owe. You should also use a Capital
           Dividend Account. The Capital Dividend Account can save you millions
           in tax by allowing life insurance proceeds and the non-taxable portion
           (50%) of capital gains to flow out of the corporation tax-free. For
-          example If your corporation earns a $100,000 capital gain from selling
+          example, If your corporation earns a $100,000 capital gain from selling
           a stock, 50% is taxable, and the other 50% is non-taxable. The
           non-taxable portion becomes a Capital Dividend Account credit. In this
           case, $50,000 is taxable, and the other $50,000 can come out of the
           corporation completely tax-free via the Capital Dividend Account.
-          ocean 6 .
+          Ocean 6.
         </p>
       </div>
     </div>
@@ -133,11 +133,11 @@
           Lastly, instead of getting a salary request for a dividend, that is
           why you don't get taxed, because technically you don't have a salary.
           I suggest you get a car that is reliable, and you should just buy it
-          with a finance plan. This bmw 3 series is really good, we will finance
-          it as it will be better for you BMW. The interest rate is 6.99%, and
+          with a finance plan. This BMW 3 series is really good, we will finance
+          it as it will be better for your BMW. The interest rate is 6.99%, and
           the car itself is $63,498.50, so the monthly payment is $1,158.06. The
           maintenance for this car will get higher and higher like always, but
-          the 1 year payment will be $437. Because you probably drive everyday i
+          the 1-year payment will be $437. Because you probably drive every day I
           would say $300 For gas a monthly payment.
         </p>
       </div>
