final check ups

--- a/Cedric.html
+++ b/Cedric.html
@@ -24,20 +24,16 @@
         background-color: lightblue;
         overflow-x: hidden;
       }
-      .PersonHeader {
-        background-image: url(./img/PersonBackground/CedricBackground.jpeg);
-        color: #1c1c1c;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
       .TopDescript {
         color: white;
+        font-family: "Kanit", sans-serif;
       }
       p {
         color: black;
       }
       h1 {
         color: white;
+        font-family: "Kanit", sans-serif;
       }
       h2 {
         color: black;
@@ -78,14 +74,7 @@
       </div>
       <div class="col TextSide">
         <p class="Housing">
-          We will get him a studio apartment in Calgary and make him share with
-          a roommate. The average rent for a studio in Calgary is $1569 Zumper.
-          We will find 1 roommate who will also be his business partner. It may
-          seem hard to share a studio apartment, but it is doable space-wise. Now
-          his rent is $784.5, this is good for him to rent because permanent
-          living situations are only good for people with stable incomes,
-          however, Cedric does not have that so it's better to get a mad
-          landlord than a bank.
+          We will get him a studio apartment in Calgary and make him share with a roommate. Calgary studio rent is $1569 Zumper. We will find 1 roommate who will also be his business partner. It may seem challenging to share a studio apartment, but it is possible. He now rents for $784.5. It's good for him to rent because permanent living conditions are only good for people with stable incomes, but Cedric does not have that, so he should look for an exceptional landlord instead of a bank as you might imagine. By finding a roommate and splitting the rent, Cedric is able to significantly reduce his living expenses while still having access to a stable living situation. This allows him to focus on his business without the financial burden of having to pay a full rent on his own. The cons are big so I would understand if you don't want to live with someone in a studio, however this is the right situation.
         </p>
       </div>
     </div>
@@ -98,16 +87,7 @@
       </div>
       <div class="col TextSide">
         <p class="Account">
-          The account I recommend him having is a TFSA account because of
-          tax-free you can take it out when you get much richer but you won't be
-          holding that as your income. Although the limit is $6,500 I would
-          recommend keeping the leftover and keeping it liquid as it is needed
-          to build prototypes and to invest into that invention of yours. A TFSA
-          account is technically liquid because you can take it out whenever you
-          want, however, you're going to get taxed for it as the government
-          recognizes it as income. Stocks are good investments in your situation
-          but Cedric should only invest 20% of his savings after every other
-          expense is paid.
+          The account I recommend him to have is a TFSA account because it's tax-free. You can take it out when you become wealthy, but you won't be counting that as income. Although the limit is $6,500 I would recommend keeping the leftovers and keeping it liquid as it is needed to build prototypes and invest in that invention of yours. A TFSA account is technically liquid because you can withdraw it whenever you want. However, you'll be taxed for it as the government recognizes it as income. Stocks are suitable investments in your situation but Cedric should only invest 20% of his savings after every other expense is paid. The cons are that he will lose money, but time shows that people gain 10% every year. I think he should take that risk as the pros of gaining 10% outweigh the cons of losing money.
         </p>
       </div>
     </div>
