--- a/Jonathan.html
+++ b/Jonathan.html
@@ -24,21 +24,16 @@
         background-color: lightcoral;
         overflow-x: hidden;
       }
-      .PersonHeader {
-        background-image: url(./img/PersonBackground/JonathanBackground.jpeg);
-        color: #1c1c1c;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
       .TopDescript {
+        font-family: "Kanit", sans-serif;
         color: white;
       }
       p {
         color: black;
       }
       h1 {
-        color: lightcoral;
+        color: white;
+        font-family: "Kanit", sans-serif;
       }
       h2 {
         color: black;
@@ -72,7 +67,7 @@
       </div>
       <div class="col TextSide">
         <p class="Housing">
-          I would still recommend him to live with his parents because it is the best situation right now. It allows him to save money and not worry about rent or utilities. It will also give him time to focus on his studies and career without the added stress of living on his own. Plus, living with his parents will give him the support he needs during this difficult time.
+          I would still recommend him to live with his parents because it is the most suitable  situation right now. It allows him to save money and not worry about rent or utilities. It will also give him time to focus on his studies and career without the added stress of being alone. Plus, living with his parents will give him the support he needs during this difficult time. Living with his parents will also provide a sense of stability and security. He will have access to a supportive environment with people who understand his needs and can help him reach his goals.
         </p>
       </div>
     </div>
@@ -85,7 +80,7 @@
       </div>
       <div class="col TextSide">
         <p class="Account">
-          For account options, I would recommend a savings, and checking account. These accounts are vital for him, as well I would suggest he get an HFSA in order to save for a home tax-free. Because we want Jonathan to have a good chance at winning the lottery we would take 50% of the check and put that to tickets for the lottery. From his Mcdonald's job, he would have an income of $24.83 an hour, because Jonathan has nothing else to do he spends 10 hours a day at his job. So he makes 7 thousand dollars a month.
+          For account options, I recommend a savings and checking account. These accounts are vital for him, and I would suggest he get an HFSA to save for a home tax-free. Because we want Jonathan to have a reasonable chance of winning the lottery we would take 50% of the check and put that into tickets for the lottery. From his McDonald's job, he would earn $24.83 an hour. This is because Jonathan has nothing else to do and he spends 10 hours a day at his job. So he makes 7 thousand dollars a month. With the ability to save up to $7,000 a month, Jonathan has the potential to save a substantial amount of money for a down payment on a home and to start a retirement fund. Furthermore, the ability to put 50% of his paycheck into lottery tickets gives him a chance to win big and also provides him with a fun and exciting way to save money.
         </p>
       </div>
     </div>
@@ -98,7 +93,7 @@
       </div>
       <div class="col TextSide">
         <p class="Transportation">
-          For his job he goes there and back every day, he goes on the mi way bus which is $3.20 per ride, he goes 14 times a week and 4 weeks a month so he spends $179.2. He can buy lottery tickets from home so he doesn't need to go to a convenience store.
+          For his job he commutes there and back every day, he rides on the Mi-Way bus which is $3.20 per ride, he goes 14 times a week and 4 weeks a month so he spends $179.2. He can buy lottery tickets from home so he doesn't need to go to a convenience store. By purchasing the lottery tickets from home, he can save the $179.2 he spends on Mi-Way bus fares every month and use it to buy more lottery tickets. This can potentially increase his chances of winning the lottery.
         </p>
       </div>
     </div>
