--- a/Owen.html
+++ b/Owen.html
@@ -24,24 +24,19 @@
         background-color: darkgreen;
         overflow-x: hidden;
       }
-      .PersonHeader {
-        background-image: url(./img/PersonBackground/OwenBackground.jpeg);
-        color: #1c1c1c;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
       .TopDescript {
-        color: black;
+        color: white;
+        font-family: "Kanit", sans-serif;
       }
       p {
-        color: black;
+        color: white;
       }
       h1 {
         color: white;
+        font-family: "Kanit", sans-serif;
       }
       h2 {
-        color: black;
+        color: white;
       }
       .Transportation {
         font-size: 24px;
