--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         </div>
       </div>
     </div>
+    <br>
+    <div>
+      <p class="intro">Hey there i'm Cheshan and this is my financial advice corporation. Here at CFAC we take any situation you are in and give you a well detailed plan on what you should do with those fine dollars, wheter you live with your parents or in a Toronto mansion, we have your back.</p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
