--- a/Jane.html
+++ b/Jane.html
@@ -20,6 +20,9 @@
     />
     <title>Jane</title>
     <style>
+      p{
+        font-size: 24px;
+      }
       body {
         background-color: orange;
         overflow-x: hidden;
@@ -31,6 +34,7 @@
       .TopDescript {
         color: white;
         font-family: "Kanit", sans-serif;
+        font-size: 24px;
       }
       p {
         color: black;
@@ -43,7 +47,7 @@
         color: black;
       }
       .Transportation {
-        font-size: 24px;
+        font-size: 14px;
       }
     </style>
   </head>
@@ -66,7 +70,7 @@
         <img src="./img/Options/home.png" alt="..." />
       </div>
       <div class="col">
-        <p style="font-size: 24px;">
+        <p class="Transportation">
           I will recommend a small apartment in an urban area like Toronto. It is close to work facilities, and she can market herself well known in the athletic world. We would get her a single-bed apartment, and would probably recommend renting it. The average rent for a single bed is $2,502 each month. The pros of renting are that there are times when if you can't pay there is leeway to satisfy, and you cannot be repossessed of anything, so, in that case, it is secure, however, the cons are that you won't be creating wealth, because you don't own, therefore houses will just become more money and you won't be making any value to your assets. I think the pros outweigh because at this time security is more important, however, your goal should be to a house, or even more.
         </p>
       </div>
@@ -79,7 +83,7 @@
         <img src="./img/Options/AccountOptions.png" alt="..." />
       </div>
       <div class="col TextSide">
-        <p style="font-size: 24px;">
+        <p class="Transportation ">
           Some Account option I would recommend is an FHSA which is a first home savings account, this way she can save for her ownership of a house and keep some money tax-free. I would also recommend an RRSP because most athletes retire early at the age of late thirties. You should also, incorporate your business because you are technically a social representative, you can get a lot of expenses that you can write, and you can also hire a family member for extra benefits to provide jobs. An FHSA allows contributions to be made with pre-tax money and withdrawals to be made without having to pay taxes. This makes it an ideal way to save for a down payment on a home. An RRSP is a retirement savings account that provides tax deferment, which can be especially beneficial for athletes who may retire earlier than other people. Incorporating a business can provide tax deductions, help to limit personal liability, and can be used to provide jobs to family members.
         </p>
       </div>
